--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.113.0",
     "@react-three/fiber": "^8.17.8",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.11",
     "maath": "^0.10.8",
     "next": "14.2.13",
     "react": "^18",
